--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,7 @@ dependencies:
   firebase_in_app_messaging: ^0.2.0+1
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
-#  firebase_messaging: ^7.0.0
+  firebase_messaging: ^7.0.0
   flutter:
     sdk: flutter
 
