--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,21 @@ dependencies:
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
   firebase_messaging: ^7.0.0
+  get_it: ^4.0.4
+  flutter_mobx: ^1.1.0+2
+  mobx: ^1.2.1+2
+  json_annotation: ^3.0.1
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  json_serializable: ^3.3.0
+  mobx_codegen: ^1.1.0+1
   flutter_test:
     sdk: flutter
 
