--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+2
   json_annotation: ^3.0.1
+  screenshots: ^2.1.1
   flutter:
     sdk: flutter
 
