--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
+  test: any
   json_serializable: ^3.3.0
   mobx_codegen: ^1.1.0+1
   flutter_test:
