--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,10 +24,10 @@ dependencies:
 #  firebase_admob: ^0.9.3+4 # Because bluevsred depends on firebase_admob ^0.9.3+4 which depends on firebase_core ^0.4.2+1, firebase_core ^0.4.2+1 is required.
   firebase_core: ^0.5.0
   firebase_analytics: ^6.0.0
-  firebase_in_app_messaging: ^0.2.0+1
+#  firebase_in_app_messaging: ^0.2.0+1
   firebase_auth: ^0.18.0+1
   cloud_firestore: ^0.14.0+2
-  firebase_messaging: ^7.0.0
+#  firebase_messaging: ^7.0.0
   get_it: ^4.0.4
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+2
