--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+2
   json_annotation: ^3.0.1
-  screenshots: ^2.1.1
+  sailor: ^0.7.1
   flutter:
     sdk: flutter
 
@@ -42,6 +42,7 @@ dependencies:
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
+  screenshots: ^2.1.1
   flutter_driver:
     sdk: flutter
   test: any
