Add gdpr pages without backoffice

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   mobx: ^1.2.1+2
   json_annotation: ^3.0.1
   sailor: ^0.7.1
+  url_launcher: ^5.7.2
   flutter:
     sdk: flutter
 
