--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,33 +22,33 @@ environment:
 
 dependencies:
 #  firebase_admob: ^0.9.3+4 # Because bluevsred depends on firebase_admob ^0.9.3+4 which depends on firebase_core ^0.4.2+1, firebase_core ^0.4.2+1 is required.
-  firebase_core: ^0.5.0
-  firebase_analytics: ^6.0.0
+  firebase_core: ^ 0.5.2
+  firebase_analytics: ^ 6.2.0
 #  firebase_in_app_messaging: ^0.2.0+1
-  firebase_auth: ^0.18.0+1
-  cloud_firestore: ^0.14.0+2
+  firebase_auth: ^0.18.3
+  cloud_firestore: ^0.14.3
 #  firebase_messaging: ^7.0.0
-  get_it: ^4.0.4
+  get_it: ^5.0.1
   flutter_mobx: ^1.1.0+2
-  mobx: ^1.2.1+2
+  mobx: ^1.2.1+4
   json_annotation: ^3.0.1
   sailor: ^0.7.1
-  url_launcher: ^5.7.2
+  url_launcher: ^5.7.10
   flutter:
     sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+  cupertino_icons: ^1.0.1
 
 dev_dependencies:
   screenshots: ^2.1.1
   flutter_driver:
     sdk: flutter
-  test: any
+  test: 1.15.4
   json_serializable: ^3.3.0
-  mobx_codegen: ^1.1.0+1
+  mobx_codegen: ^1.1.2
   flutter_test:
     sdk: flutter
 
