--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.1
+  cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  screenshots: ^2.1.1
+  screenshots: any
   flutter_driver:
     sdk: flutter
-  test: 1.15.4
+  test: any
   json_serializable: ^3.3.0
   mobx_codegen: ^1.1.2
   flutter_test:
