--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,18 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+dependency_overrides:
+  screenshots:
+    git: https://github.com/trygvis/screenshots
+  tool_base:
+    git: https://github.com/speaking-in-code/tool_base
+  tool_base_test:
+    git: https://github.com/trygvis/tool_base_test
+  tool_mobile:
+    git: https://github.com/trygvis/tool_mobile
+  fake_process_manager:
+    git: https://github.com/trygvis/fake_process_manager
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
