--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,16 +22,16 @@ environment:
 
 dependencies:
 #  firebase_admob: ^0.9.3+4 # Because bluevsred depends on firebase_admob ^0.9.3+4 which depends on firebase_core ^0.4.2+1, firebase_core ^0.4.2+1 is required.
-  firebase_core: ^ 0.5.2
-  firebase_analytics: ^ 6.2.0
+  firebase_core: ^ 0.5.3
+  firebase_analytics: ^ 6.3.0
 #  firebase_in_app_messaging: ^0.2.0+1
-  firebase_auth: ^0.18.3
-  cloud_firestore: ^0.14.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
 #  firebase_messaging: ^7.0.0
-  get_it: ^5.0.1
+  get_it: ^5.0.3
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+4
-  json_annotation: ^3.0.1
+  json_annotation: ^3.1.1
   sailor: ^0.7.1
   url_launcher: ^5.7.10
   flutter:
@@ -47,22 +47,22 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   test: any
-  json_serializable: ^3.3.0
+  json_serializable: ^3.5.1
   mobx_codegen: ^1.1.2
   flutter_test:
     sdk: flutter
 
-dependency_overrides:
-  screenshots:
-    git: https://github.com/trygvis/screenshots
-  tool_base:
-    git: https://github.com/speaking-in-code/tool_base
-  tool_base_test:
-    git: https://github.com/trygvis/tool_base_test
-  tool_mobile:
-    git: https://github.com/trygvis/tool_mobile
-  fake_process_manager:
-    git: https://github.com/trygvis/fake_process_manager
+#dependency_overrides:
+ # screenshots:
+  #  git: https://github.com/trygvis/screenshots
+  #tool_base:
+  #  git: https://github.com/speaking-in-code/tool_base
+  #tool_base_test:
+  #  git: https://github.com/trygvis/tool_base_test
+  #tool_mobile:
+  #  git: https://github.com/trygvis/tool_mobile
+  #fake_process_manager:
+  #  git: https://github.com/trygvis/fake_process_manager
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
