--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,13 +22,13 @@ environment:
 
 dependencies:
 #  firebase_admob: ^0.9.3+4 # Because bluevsred depends on firebase_admob ^0.9.3+4 which depends on firebase_core ^0.4.2+1, firebase_core ^0.4.2+1 is required.
-  firebase_core: ^ 0.5.3
-  firebase_analytics: ^ 6.3.0
+  firebase_core: ^0.7.0
+  firebase_analytics: ^7.0.1
 #  firebase_in_app_messaging: ^0.2.0+1
-  firebase_auth: ^0.18.4+1
-  cloud_firestore: ^0.14.4
+  firebase_auth: ^0.20.0+1
+  cloud_firestore: ^0.16.0
 #  firebase_messaging: ^7.0.0
-  get_it: ^5.0.3
+  get_it: ^5.0.6
   flutter_mobx: ^1.1.0+2
   mobx: ^1.2.1+4
   json_annotation: ^3.1.1
@@ -40,7 +40,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
+#  cupertino_icons: ^1.0.0
 
 dev_dependencies:
   screenshots: any
