--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ app.*.map.json
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 /android/app/google-services.json
 /ios/GoogleService-Info.plist
+/test_driver/tests/library/tmp_test_image/
+/test_driver/tests/library/tmp_test_difference/
