--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,15 @@ dependencies:
 #  firebase_auth: ^0.20.0+1
 #  cloud_firestore: ^0.16.0+1
 #  firebase_messaging: ^7.0.0
-  dartz: ^0.9.2
-  get_it: ^6.0.0
+  dartz: ^0.10.0-nullsafety.2
+  get_it: ^7.2.0
   flutter:
     sdk: flutter
-  flutter_mobx: ^1.1.0+2
-  json_annotation: ^4.0.0
-  mobx: ^1.2.1+4
+  flutter_mobx: ^2.0.1
+  json_annotation: ^4.1.0
+  mobx: ^2.0.3
   sailor: ^0.7.1
-  url_launcher: ^6.0.2
+  url_launcher: ^6.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -44,17 +44,20 @@ dependencies:
 #  cupertino_icons: ^1.0.0
 
 dev_dependencies:
-  build_runner: ^1.11.5
+  build_runner: ^2.1.0
   diff_image: ^1.0.1
-  flutter_driver:
+  flutter_driver:git status
     sdk: flutter
   test: any
-  json_serializable: ^4.0.2
-  mobx_codegen: ^1.1.2
+  json_serializable: ^5.0.0
+  mobx_codegen: ^2.0.2
   flutter_test:
     sdk: flutter
 
-#dependency_overrides:
+dependency_overrides:
+#  crypto: ^3.0.0
+  analyzer: ^2.0.0
+  meta: ^1.7.0
  # screenshots:
   #  git: https://github.com/trygvis/screenshots
   #tool_base:
