--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,8 +45,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.1.0
-  diff_image: ^1.0.1
-  flutter_driver:git status
+#  diff_image: ^1.0.1
+  integration_test:
     sdk: flutter
   test: any
   json_serializable: ^5.0.0
@@ -58,6 +58,10 @@ dependency_overrides:
 #  crypto: ^3.0.0
   analyzer: ^2.0.0
   meta: ^1.7.0
+  archive: ^3.1.2
+  convert: ^3.0.0
+#  because of diff_image
+#  http_parser: ^4.0.0
  # screenshots:
   #  git: https://github.com/trygvis/screenshots
   #tool_base:
