--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   bloc: ^7.0.0
   flutter_bloc: ^7.0.0
   intl: ^0.17.0
+  golden_toolkit: ^0.11.0
 
 dev_dependencies:
   integration_test:
