allow manual CI launch

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,7 +1,9 @@
 name: bluevsred
 
-on: [pull_request, push]
-
+on:
+  pull_request:
+  push:
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
