--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dev_dependencies:
     sdk: flutter
   integration_test:
     sdk: flutter
+  mockingjay: ^0.2.0
   mocktail: ^0.2.0
   very_good_analysis: ^2.1.0
 
