--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -3,3 +3,5 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   language:
     strict-casts: true
+  errors:
+    invalid_annotation_target: ignore
