--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   nes_ui: ^0.15.0
   google_fonts: ^6.1.0
   logging: ^1.2.0
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  uuid: ^4.3.3
 
 dev_dependencies:
   flame_test: ^1.15.3
@@ -31,6 +34,9 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   test: ^1.24.3
+  build_runner: ^2.4.8
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
