--- a/bluevsred_server/config/development.yaml
+++ b/bluevsred_server/config/development.yaml
@@ -29,8 +29,8 @@ webServer:
 
 # This is the database setup for your server.
 database:
-  host: localhost
-  port: 8090
+  host: postgres
+  port: 5432
   name: bluevsred
   user: postgres
 
