--- a/bluevsred_server/pubspec.yaml
+++ b/bluevsred_server/pubspec.yaml
@@ -8,6 +8,8 @@ environment:
 
 dependencies:
   serverpod: 1.2.6
+  bluevsred_shared:
+    path: ../bluevsred_shared
 
 dev_dependencies:
   lints: ^3.0.0
