--- a/bluevsred_shared/pubspec.yaml
+++ b/bluevsred_shared/pubspec.yaml
@@ -8,11 +8,17 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  build_runner: ^2.4.9
-  freezed: ^2.4.7
   serverpod_serialization: ^1.2.6
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
   # path: ^1.8.0
+  uuid: ^4.3.3
+
 
 dev_dependencies:
   lints: ^3.0.0
   test: ^1.24.0
+  build_runner: ^2.4.9
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
+
