--- a/bluevsred_flutter/pubspec.yaml
+++ b/bluevsred_flutter/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   uuid: ^4.3.3
+  flutter_riverpod: ^2.5.1
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
   flame_test: ^1.15.3
@@ -50,9 +52,12 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   test: ^1.24.3
-  build_runner: ^2.4.8
+  build_runner: ^2.4.9
   freezed: ^2.4.7
   json_serializable: ^6.7.1
+  riverpod_generator: ^2.4.0
+  custom_lint: ^0.6.4
+  riverpod_lint: ^2.3.10
 
 flutter:
   uses-material-design: true
