--- a/bluevsred_shared/pubspec.yaml
+++ b/bluevsred_shared/pubspec.yaml
@@ -8,11 +8,13 @@ environment:
 
 # Add regular dependencies here.
 dependencies:
-  serverpod_serialization: ^1.2.6
+  serverpod_serialization: 1.2.6
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
   # path: ^1.8.0
   uuid: ^4.3.3
+  bluevsred_client:
+    path: ../bluevsred_client
 
 
 dev_dependencies:
