--- a/bluevsred_client/pubspec.yaml
+++ b/bluevsred_client/pubspec.yaml
@@ -1,6 +1,8 @@
 name: bluevsred_client
 description: Starting point for a Serverpod client.
 
+publish_to: none
+
 environment:
   sdk: '>=3.0.0 <4.0.0'
 
