--- a/bluevsred_flutter/pubspec.yaml
+++ b/bluevsred_flutter/pubspec.yaml
@@ -1,5 +1,5 @@
 name: bluevsred_flutter
-description: "A new Flutter project."
+description: "A Flutter game where color choice determines your gameplay style."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -34,6 +34,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
+  # Game engine
+  flame: ^1.16.0
+  flame_audio: ^2.1.8
+  
+  # State management
+  provider: ^6.1.1
+  
+  # Utilities
+  shared_preferences: ^2.2.3
+  equatable: ^2.0.5
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +57,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  test: ^1.24.9
+  mockito: ^5.4.4
+  build_runner: ^2.4.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,16 +72,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/to/resolution-aware-images
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/to/asset-from-package
+  assets:
+    - assets/images/
+    - assets/audio/
+    - assets/fonts/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
